added a few more exercises to lista1 in electives/py

--- a/electives/py/lista1.ipynb
+++ b/electives/py/lista1.ipynb
@@ -120,10 +120,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[1, 2, 3, 5, 4, 0]"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def remove_doubles(list):\n",
+    "    output = []\n",
+    "    length = len(list)\n",
+    "    while length > 0:\n",
+    "        x = list[0]\n",
+    "        for j in range(0, length):\n",
+    "            try:\n",
+    "                list.remove(x)\n",
+    "                length-=1\n",
+    "            except:\n",
+    "                break\n",
+    "        output.append(x)\n",
+    "    return output\n",
+    "\n",
+    "remove_doubles([1,1,2,2,2,3,3,5,5,5,4,4,4,0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +161,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(2, 8)]"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prime_factors(n):\n",
+    "    output = []\n",
+    "    for i in range(2, n+1):\n",
+    "        if n % i == 0:\n",
+    "            alpha = 0\n",
+    "            while n % i == 0:\n",
+    "                n = n / i\n",
+    "                alpha+=1\n",
+    "            output.append((i,alpha))\n",
+    "    return output\n",
+    "\n",
+    "prime_factors(256)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,10 +199,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fraczero(n):\n",
+    "    iterator = 0\n",
+    "    output = 0\n",
+    "    factorial = 1\n",
+    "    while 10 * (iterator//10) + 10 < n:\n",
+    "        for i in range(iterator+1, iterator+11):\n",
+    "            factorial *= i\n",
+    "        while factorial % 10 == 0:\n",
+    "            factorial //= 10\n",
+    "            output+=1\n",
+    "        print(factorial, output)\n",
+    "        iterator += 10\n",
+    "    print(iterator, n-iterator)\n",
+    "    print('merdas')\n",
+    "    for i in range(iterator, n):\n",
+    "        factorial *= i\n",
+    "        while factorial % 10 == 0:\n",
+    "            factorial /= 10\n",
+    "            output+=1\n",
+    "            print('m',output)\n",
+    "    \n",
+    "    \n",
+    "    return output\n",
+    "\n",
+    "n=1\n",
+    "print(fraczero(n))\n",
+    "print(math.factorial(n))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -309,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
