added a few more exercises to lista1 in electives/py

--- a/electives/py/lista1.ipynb
+++ b/electives/py/lista1.ipynb
@@ -199,37 +199,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "fraczero 2\nfactorial 3628800\n"
+    }
+   ],
    "source": [
-    "def fraczero(n):\n",
-    "    iterator = 0\n",
+    "import math\n",
+    "def fraczero_alt(n):\n",
+    "    \"\"\" Alternative approach \"\"\"\n",
+    "    iterator = 1\n",
     "    output = 0\n",
     "    factorial = 1\n",
     "    while 10 * (iterator//10) + 10 < n:\n",
-    "        for i in range(iterator+1, iterator+11):\n",
+    "        for i in range(iterator, iterator+10):\n",
     "            factorial *= i\n",
     "        while factorial % 10 == 0:\n",
     "            factorial //= 10\n",
     "            output+=1\n",
-    "        print(factorial, output)\n",
     "        iterator += 10\n",
-    "    print(iterator, n-iterator)\n",
-    "    print('merdas')\n",
-    "    for i in range(iterator, n):\n",
+    "    for i in range(iterator, n+1):\n",
     "        factorial *= i\n",
-    "        while factorial % 10 == 0:\n",
-    "            factorial /= 10\n",
-    "            output+=1\n",
-    "            print('m',output)\n",
+    "    while factorial % 10 == 0 and factorial > 0:\n",
+    "        factorial //= 10\n",
+    "        output+=1\n",
+    "        if output > 5:\n",
+    "            break\n",
     "    \n",
     "    \n",
     "    return output\n",
     "\n",
-    "n=1\n",
-    "print(fraczero(n))\n",
-    "print(math.factorial(n))\n"
+    "def fraczero(n):\n",
+    "    \"\"\" Simple approach \"\"\"\n",
+    "    x = math.factorial(n)\n",
+    "    output = 0\n",
+    "    while x % 10 == 0:\n",
+    "        x //= 10\n",
+    "        output+=1\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "n=10\n",
+    "print('fraczero', fraczero(n))\n",
+    "print('factorial', math.factorial(n))\n"
    ]
   },
   {
@@ -249,10 +265,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "list: [1, 3, 10, 13, 14, 24, 28, 30, 42, 50, 52, 59, 65, 70, 86, 86, 87, 94, 95, 96]\naverage: 50.25\nmax: 96\nmax secondary: 95\nmin: 1\nmin secondary: 3\n"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "def generate_random_numbers():\n",
+    "    output = []\n",
+    "    for i in range(0, 20):\n",
+    "        output.append(random.randint(1,100))\n",
+    "    return output\n",
+    "\n",
+    "list = generate_random_numbers()\n",
+    "list.sort()\n",
+    "sum=0\n",
+    "max=list[len(list)-1]\n",
+    "max_secondary=list[len(list)-2]\n",
+    "min=list[0]\n",
+    "min_secondary=list[1]\n",
+    "for i in range(0,20):\n",
+    "    el = list[i]\n",
+    "    sum+=el\n",
+    "print('list:', list)\n",
+    "print('average:', sum/20)\n",
+    "print('max:', max)\n",
+    "print('max secondary:', max_secondary)\n",
+    "print('min:', min)\n",
+    "print('min secondary:', min_secondary)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,10 +311,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "['aababacaa']\n"
+    }
+   ],
+   "source": [
+    "def find(pattern, list):\n",
+    "    # generate a dictionary\n",
+    "    dict = {}\n",
+    "    output = []\n",
+    "    for i in range(0, len(pattern)):\n",
+    "        p = pattern[i]\n",
+    "        if p != '*':\n",
+    "            dict[i] = p\n",
+    "    for x in list:\n",
+    "        if(len(x) == len(pattern)):\n",
+    "            for i in range(0, len(pattern)):\n",
+    "                p = dict.get(i)\n",
+    "                if(p == None):\n",
+    "                    continue\n",
+    "                if(p != x[i]):\n",
+    "                    break\n",
+    "            else:\n",
+    "                output.append(x)\n",
+    "    return output\n",
+    "\n",
+    "list = ['aababacaa', 'cabaabcca', 'aaabbcbacb', 'acababbaab']\n",
+    "pattern = 'a**a*****'\n",
+    "print(find(pattern, list))\n"
+   ]
   },
   {
    "cell_type": "markdown",
