added more exercises to lista1 in electives/py

--- a/electives/py/lista1.ipynb
+++ b/electives/py/lista1.ipynb
@@ -30,24 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "        1   \n",
-      "\n",
-      "      1   1   \n",
-      "\n",
-      "    1   2   1   \n",
-      "\n",
-      "  1   3   3   1   \n",
-      "\n",
-      "1   4   6   4   1   \n",
-      "\n"
-     ]
+     "text": "\n        1   \n\n      1   1   \n\n    1   2   1   \n\n  1   3   3   1   \n\n"
     }
    ],
    "source": [
@@ -55,7 +44,8 @@
     "def binom(n, k):\n",
     "    return math.factorial(n) // math.factorial(k) // math.factorial(n - k)\n",
     "def pascal_triangle(n):\n",
-    "    for i in range(0, n+1):\n",
+    "    print('')\n",
+    "    for i in range(0, n):\n",
     "        for k in range (0, n - i):\n",
     "            print('  ', end='')\n",
     "        for j in range (0, i+1):\n",
@@ -199,13 +189,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "fraczero 2\nfactorial 3628800\n"
+     "text": "fraczero 12\nfactorial 80658175170943878571660636856403766975289505440883277824000000000000\n"
     }
    ],
    "source": [
@@ -243,8 +233,9 @@
     "    return output\n",
     "\n",
     "\n",
-    "n=10\n",
+    "n=52\n",
     "print('fraczero', fraczero(n))\n",
+    "# print('fraczero_alt', fraczero_alt(n))\n",
     "print('factorial', math.factorial(n))\n"
    ]
   },
@@ -358,10 +349,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "151"
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map = {\n",
+    "    'I': 1,\n",
+    "    'V': 5,\n",
+    "    'X': 10,\n",
+    "    'L': 50,\n",
+    "    'C': 100,\n",
+    "    'D': 500,\n",
+    "    'M': 1000\n",
+    "}\n",
+    "def roman_to_arabic(roman):\n",
+    "    # sanitize the input\n",
+    "    roman = roman.upper()\n",
+    "\n",
+    "    output = 0\n",
+    "    # count same letters that are adjacent to each other; clear if there is a different letter\n",
+    "    same_letter_so_far_count = 0\n",
+    "    same_letter_so_far = ''\n",
+    "\n",
+    "    # indicator whether a subtraction was performed\n",
+    "    did_the_subtraction_flag = False\n",
+    "    \n",
+    "    # iterator over roman number string\n",
+    "    for i in range(0, len(roman)):\n",
+    "        # setup current and previous\n",
+    "        current = roman[i]\n",
+    "        previous = current\n",
+    "        # set previous if possible\n",
+    "        if i > 0:\n",
+    "            previous = roman[i-1]\n",
+    "        # by default add the arabic representation to the output\n",
+    "        output += map[current]\n",
+    "\n",
+    "        # add up to 3 consecutive numbers to the output\n",
+    "        if current == same_letter_so_far:\n",
+    "            same_letter_so_far_count+=1\n",
+    "            if same_letter_so_far_count > 3:\n",
+    "                return 'you can\\'t add more than 3 consecutive atomic numbers together'\n",
+    "        \n",
+    "        # if it wasn't the same number, perform subtraction if possible\n",
+    "        else:\n",
+    "            # abort if roman number wants to subtract a sum of two atomic numbers\n",
+    "            if map[previous] < map[current] and did_the_subtraction_flag:\n",
+    "                return 'you can\\'t subtract a sum of smaller numbers from a bigger atomic number'\n",
+    "            \n",
+    "            if same_letter_so_far != '':\n",
+    "                # something is hapenning, because there is already a same_letter_so_far\n",
+    "\n",
+    "                # check the order of magnitude\n",
+    "                order = map[current]//map[same_letter_so_far]\n",
+    "                if order > 0:\n",
+    "                    # only deal with subtractions that are in the adjacent order of magnitude\n",
+    "                    if order == 10 or order == 5:\n",
+    "                        # it's alright, the difference is normal\n",
+    "\n",
+    "                        # allow only up to one number to be subtracted\n",
+    "                        if same_letter_so_far_count > 1:\n",
+    "                            return 'only one number can be subtracted from the other'\n",
+    "                        # now, remove that was actually just subtracting from the bigger number\n",
+    "                        # and at the same time apply the subtraction from the bigger number\n",
+    "                        output -= 2*same_letter_so_far_count*map[same_letter_so_far]\n",
+    "                        # reset fully\n",
+    "                        same_letter_so_far = ''\n",
+    "                        same_letter_so_far_count = 0\n",
+    "                        # but remember that there was a subtraction\n",
+    "                        did_the_subtraction_flag = True\n",
+    "                        continue\n",
+    "                    else:\n",
+    "                        return 'invalid roman number'\n",
+    "            # resetting to the current number\n",
+    "            same_letter_so_far = current\n",
+    "            same_letter_so_far_count = 1\n",
+    "            did_the_subtraction_flag = False\n",
+    "    return output\n",
+    "\n",
+    "roman_to_arabic('cli')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -391,10 +467,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "25"
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval('')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -434,6 +521,91 @@
     "                            *                   |\n",
     "                                                |\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "\n                                        |             ***********               \n                                        |           **           **             \n                                        |         **               **           \n                                        |        *                   *          \n                                        |      **                     **        \n                                        |     *                         *       \n                                        |    *                           *      \n                                        |  **                             **    \n                                        | *                                 *   \n                                        |*                                   *  \n                                        |                                     * \n----------------------------------------|---------------------------------------\n*                                     * |                                       \n *                                   *  |                                       \n  *                                 *   |                                       \n   **                             **    |                                       \n     *                           *      |                                       \n      *                         *       |                                       \n       **                     **        |                                       \n         *                   *          |                                       \n          **               **           |                                       \n            **           **             |                                       \n              ***** *****               |                                       \n                   *                    |           \n"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import sys\n",
+    "def get_func_values(func, begin, end):\n",
+    "\n",
+    "    if begin > end:\n",
+    "        return '`begin` can\\'t be a bigger number than `end`'\n",
+    "    values = []\n",
+    "    # prepare max, min\n",
+    "    min = sys.float_info.max\n",
+    "    max = sys.float_info.min\n",
+    "    # loop thorugh and populate 80 values of the provided function\n",
+    "    # whilst searching for the max and min\n",
+    "    for i in range(0,80):\n",
+    "        value = func(begin + (i/80)*(abs(begin) + abs(end)))\n",
+    "        if value > max:\n",
+    "            max = value\n",
+    "        elif value < min:\n",
+    "            min = value\n",
+    "        values.append(value)\n",
+    "    return (\n",
+    "        values,\n",
+    "        max,\n",
+    "        min\n",
+    "        )\n",
+    "\n",
+    "def generate_func_chart(input):\n",
+    "    # get the vars from the input tuple\n",
+    "    values = input[0]\n",
+    "    min = input[1]\n",
+    "    max = input[2]\n",
+    "    \n",
+    "    chart = []\n",
+    "    # populate the chart array with columns of values\n",
+    "    for i in range(0,80):\n",
+    "        column = []\n",
+    "        if i == 39:\n",
+    "            # add a vertical line to the chart\n",
+    "            for j in range(0,24):\n",
+    "                column.append('|')\n",
+    "            chart.append(column)\n",
+    "            continue\n",
+    "        else:\n",
+    "            for j in range(0,24):\n",
+    "                column.append(' ')\n",
+    "\n",
+    "        value = values[i]\n",
+    "        index = math.floor(( value / (abs(max) + abs(min)) + 0.5 ) * 23)\n",
+    "        column[index] = '*'\n",
+    "\n",
+    "        # add a horizontal line to the chart\n",
+    "        column[11] = '-'            \n",
+    "\n",
+    "        chart.append(column)\n",
+    "    \n",
+    "    # why does it need to be there? I ask myself that question as well,\n",
+    "    # but it needs to be there to render the chart properly for some reason\n",
+    "    print('')\n",
+    "    for i in range(0, 24):\n",
+    "        for j in range(0, 80):\n",
+    "            print(chart[79-j][i], end='')\n",
+    "        print('\\n', end='')\n",
+    "\n",
+    "\n",
+    "def func(x):\n",
+    "    return math.sin(x)\n",
+    "\n",
+    "generate_func_chart(get_func_values(func, -1 * math.pi, math.pi))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
