added more graphs to wyk 2020-03-4 in electives/wtg

--- a/electives/wtg/wyk/2020-03-4/2020-03-4.md
+++ b/electives/wtg/wyk/2020-03-4/2020-03-4.md
@@ -16,6 +16,8 @@ $$
 
 $\upuparrows$
 
+![dowód](graphs/havel-hakimi-dowód.png)
+
 $d_1 = 3$
 
 rzędy wierzchołków:
@@ -30,9 +32,9 @@ dołączamy do każdego z powyższych dodatkowy węzeł:
 
 ### Przykład $\downdownarrows$
 
-$(3,2,2,2,1)$
+![dowód-1](graphs/havel-hakimi-przykład-1.png)
 
-![dowód-1](graphs/dowód-1.png)
+$(3,2,2,2,1)$
 
 $(2,1,1,0)$
 
@@ -57,9 +59,9 @@ Jest $x \in \mathcal{N}(1)$ takie, że $\deg(x) < \deg(d_{1+d_1})$
 
 #### Przykład
 
-d_1 = 4
+$d_1 = 4$
 
-\<insert graph\>
+![havel hakimi](graphs/havel-hakimi-dowód-2.png)
 
 $v_4 \leftarrow$ lipny, taki, że $\deg(v_4) < d_{1 + d_1}$
 
@@ -70,6 +72,8 @@ Jest $y$ taki, że
 Jest $z$ taki, że
 1. $z \in \mathcal{N}(y)$
 2. $z \notin \mathcal{N}(v_4)$
+
+![havel hakimi](graphs/havel-hakimi-dowód-3.png)
 
 $G'$:
 1. $\deg(1) = \deg_6(1) = 4$
@@ -85,13 +89,18 @@ $\blacksquare$
 
 ## Graficzne ZOO
 
-- graf zupełny: $K_n \cong (\{1,...,n\}, [\{1,...,n\}]^2)$
+- graf zupełny: $K_n \cong (\{1,...,n\}, [\{1,...,n\}]^2)$\
+  ![zoo 1](graphs/zoo-1.png)
 - graf pusty: $E_n \cong (\{1,...,n\}, \emptyset)$
-- graf liniowy: $L_n = ( \{1,...,n\}, \{\{i,i+1\}: i = 1,...,n-1\} )$
-- graf cykliczny: $C_N$ - jak liniowy, ale połączony w cykl \<insert graph\>
+- graf liniowy: $L_n = ( \{1,...,n\}, \{\{i,i+1\}: i = 1,...,n-1\} )$\
+  ![zoo 2](graphs/zoo-2.png)
+- graf cykliczny: $C_N$ - jak liniowy, ale połączony w cykl \<insert graph\>\
+  ![zoo 4](graphs/zoo-4.png)
 - graf $(V,E)$ jest dwudzielny, jeśli istnieją $X,Y$ takie, że:
   1. $X\cup Y = V \land X \cap Y = \emptyset \land X \neq \emptyset \land Y \neq \emptyset$
   2. $E \subseteq \{ \{x,y\}: x \in X \land y \in Y \}$
+
+    ![zoo 3](graphs/zoo-3.png)
 
     $K_{n,m} = (X\cup Y, \{\{x,y\}: x \in X, y \in Y\})$\
     $|X| = n, |Y| = m$
@@ -107,7 +116,7 @@ Mamy $G(V,E)$
 
 ## Przykład Grafu Petersena
 
-\<insert graph\>
+![petersena](graphs/petersena.png)
 
 $\forall x \in V~~deg(x) =3$ jest to graf regularny $\equiv (\exists c)(\forall x \in V)(\deg(x) = c)$
 
@@ -123,7 +132,7 @@ $$
 
 ### Przykład
 
-\<insert graph\>
+![krawędziowy przykład](graphs/krawędziowy.png)
 
 $L(K_3) \simeq K_3$
 
@@ -146,11 +155,9 @@ $n = 3$ $(i_1, i_2, i_3)$
 
 $H_2$
 
-\<insert graph\>
-
 $H_3$
 
-\<insert graph\>
+![hiperkostka](graphs/hiperkostka.png)
 
 - Suma grafów\
   $G_1=(V_1, E_1)$, $G_2 = (V_2, E_2)$; $V_1 \cap V_2 = \emptyset$\
@@ -167,7 +174,7 @@ Ustalmy grafy $G=(V,E,\phi)$
      - $x_0,...,x_n \in V$
      - $e_1,...,e_n \in E$
      - $\{x_i, x_{i+1}\} = \phi(e_{i+1})$ $i = 0...(n-1)$
-     - \<insert graph\>
+     - ![trasa](graphs/trasa.png)
 2. Ścieżka: trasa bez powtórzonych krawędzi
 3. Droga: ścieżka bez powtórzonych wierzchołków
 4. Cykl: ścieżka taka, że $x_0 = x_n$
@@ -184,6 +191,8 @@ Nazewnictwo:
 
 1. Jest trasa od $x$ do $y$
 2. Jest droga od $x$ do $y$
+
+![fakt trasa droga](graphs/fakt-trasa-droga.png)
 
 ## Składowe spójne
 
@@ -204,7 +213,7 @@ Niech $G=(V,E)$ będzie grafem prostym.
 
 Jeśli $G$ jest spójny to $|E| \ge |V| - 1$
 
-\<insert graph\>
+![twierdzenie](graphs/twierdzenie-spójny-e-v.png)
 
 ### Dowód
 
@@ -221,7 +230,7 @@ $$
 (n+1)*2 \le \sum_{x\in V}\deg(x) = 2|E| \le 2(n-1)
 $$
 
-\<insert graph\>
+![twierdzenie dowód](graphs/twierdzenie-dowód.png)
 
 $V_1 = V \setminus \{x\},~|V_1| = n$\
 $G_1 = G \setminus \{x\}$ $\leftarrow$ spójny
