improved some exercises in lista1 in electives/py

--- a/electives/py/lista1.ipynb
+++ b/electives/py/lista1.ipynb
@@ -467,20 +467,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "25"
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Calculator:\n11\n1.2246467991473532e-16\n-1.0\n0.0\n"
     }
    ],
    "source": [
-    "eval('')"
+    "from math import *\n",
+    "\n",
+    "def evaluate(expression):\n",
+    "    expression = expression.replace('^', '**')\n",
+    "    return eval(expression)\n",
+    "\n",
+    "def calculator():\n",
+    "    user_input = ''\n",
+    "    print('Calculator:')\n",
+    "    while user_input != '.exit':\n",
+    "        if len(user_input) > 0:\n",
+    "            print(evaluate(user_input))\n",
+    "        user_input = input('type .exit to exit')\n",
+    "\n",
+    "calculator()\n"
    ]
   },
   {
@@ -525,18 +536,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "\n                                        |             ***********               \n                                        |           **           **             \n                                        |         **               **           \n                                        |        *                   *          \n                                        |      **                     **        \n                                        |     *                         *       \n                                        |    *                           *      \n                                        |  **                             **    \n                                        | *                                 *   \n                                        |*                                   *  \n                                        |                                     * \n----------------------------------------|---------------------------------------\n*                                     * |                                       \n *                                   *  |                                       \n  *                                 *   |                                       \n   **                             **    |                                       \n     *                           *      |                                       \n      *                         *       |                                       \n       **                     **        |                                       \n         *                   *          |                                       \n          **               **           |                                       \n            **           **             |                                       \n              ***** *****               |                                       \n                   *                    |           \n"
+     "text": "chart for cos(x) from 0 to 6.283185307179586\n|                                                                               \n|*****                                                                     *****\n|     **                                                                 **     \n|       **                                                             **       \n|         *                                                           *         \n|          **                                                       **          \n|            *                                                     *            \n|             *                                                   *             \n|              **                                               **              \n|                *                                             *                \n|                 *                                           *                 \n|                  *                                         *                  \n|-------------------------------------------------------------------------------\n|                    *                                     *                    \n|                     *                                   *                     \n|                      *                                 *                      \n|                       **                             **                       \n|                         *                           *                         \n|                          *                         *                          \n|                           **                     **                           \n|                             *                   *                             \n|                              **               **                              \n|                                **           **                                \n|                                  ***********                                  \n"
     }
    ],
    "source": [
-    "import math\n",
+    "from math import *\n",
     "import sys\n",
+    "\n",
+    "def evaluate(expression):\n",
+    "    expression = expression.replace('^', '**')\n",
+    "    return eval(expression)\n",
+    "\n",
     "def get_func_values(func, begin, end):\n",
     "\n",
     "    if begin > end:\n",
@@ -548,7 +564,8 @@
     "    # loop thorugh and populate 80 values of the provided function\n",
     "    # whilst searching for the max and min\n",
     "    for i in range(0,80):\n",
-    "        value = func(begin + (i/80)*(abs(begin) + abs(end)))\n",
+    "        # value = func(begin + (i/80)*(abs(begin) + abs(end)))\n",
+    "        value = evaluate(func.replace('x', str(begin + (i/80)*(abs(begin) + abs(end)))))\n",
     "        if value > max:\n",
     "            max = value\n",
     "        elif value < min:\n",
@@ -560,52 +577,52 @@
     "        min\n",
     "        )\n",
     "\n",
-    "def generate_func_chart(input):\n",
+    "def generate_func_chart(func, begin, end):\n",
+    "\n",
+    "    func_evaluated = get_func_values(func, begin, end)\n",
+    "\n",
     "    # get the vars from the input tuple\n",
-    "    values = input[0]\n",
-    "    min = input[1]\n",
-    "    max = input[2]\n",
+    "    values = func_evaluated[0]\n",
+    "    min = func_evaluated[1]\n",
+    "    max = func_evaluated[2]\n",
     "    \n",
     "    chart = []\n",
     "    # populate the chart array with columns of values\n",
+    "    added_vertical_line = False\n",
     "    for i in range(0,80):\n",
     "        column = []\n",
-    "        if i == 39:\n",
+    "        if floor(begin + (i/80)*(abs(begin) + abs(end))) == 0 and not added_vertical_line:\n",
     "            # add a vertical line to the chart\n",
-    "            for j in range(0,24):\n",
-    "                column.append('|')\n",
-    "            chart.append(column)\n",
+    "            chart.append(list('|' * 24))\n",
+    "            added_vertical_line = True\n",
     "            continue\n",
     "        else:\n",
-    "            for j in range(0,24):\n",
-    "                column.append(' ')\n",
+    "            column = list(' ' * 24)\n",
     "\n",
     "        value = values[i]\n",
-    "        index = math.floor(( value / (abs(max) + abs(min)) + 0.5 ) * 23)\n",
+    "        index = floor(( value / (abs(max) + abs(min)) + 0.5 ) * 23)\n",
     "        column[index] = '*'\n",
     "\n",
     "        # add a horizontal line to the chart\n",
-    "        column[11] = '-'            \n",
+    "        column[11] = '-'\n",
     "\n",
     "        chart.append(column)\n",
     "    \n",
     "    # why does it need to be there? I ask myself that question as well,\n",
     "    # but it needs to be there to render the chart properly for some reason\n",
-    "    print('')\n",
+    "    print('chart for', func, 'from', begin, 'to', end)\n",
     "    for i in range(0, 24):\n",
     "        for j in range(0, 80):\n",
-    "            print(chart[79-j][i], end='')\n",
+    "            print(chart[j][23-i], end='')\n",
     "        print('\\n', end='')\n",
     "\n",
+    "def plotter():\n",
+    "    func = input('Provide the function to plot: f(x) = ')\n",
+    "    begin = evaluate(input('Provide plot beginning: a = '))\n",
+    "    end = evaluate(input('Provide plot end: b = '))\n",
+    "    generate_func_chart(func, begin, end)\n",
     "\n",
-    "def func(x):\n",
-    "    return math.sin(x)\n",
-    "\n",
-    "generate_func_chart(get_func_values(func, -1 * math.pi, math.pi))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plotter()\n"
    ]
   },
   {
