added wyk 2020-03-18 to electives/wtg

--- a/electives/wtg/wyk/2020-03-4/2020-03-4.md
+++ b/electives/wtg/wyk/2020-03-4/2020-03-4.md
@@ -208,7 +208,7 @@ $c(G) = |V_{/\sim}|$
 
 $G$ jest spójny $\equiv$ $c(G) = 1$
 
-## $Twierdzenie$
+## $Twierdzenie$ #2
 Niech $G=(V,E)$ będzie grafem prostym.
 
 Jeśli $G$ jest spójny to $|E| \ge |V| - 1$
