applied small fixes in wyk of electives/wtg

--- a/electives/wtg/wyk/2020-02-26/2020-02-26.md
+++ b/electives/wtg/wyk/2020-02-26/2020-02-26.md
@@ -106,11 +106,11 @@ $V = \{ v_1, v_2, ..., v_n \}$\
 $E = \{ e_1, e_2, ..., e_m \}$
 
 ### Macierz sąsiędztwa
-$M = [a_{ij}]$\
+$M = [a_{ij}]$
 $$
 a_{ij} = \begin{cases}
-  |\{ e \in L: \phi(e) \equiv = \{ v_i, v_j \} \}|: i \neq j\\
-  2|\{e \in E \}
+  \left|\{ e \in L: \phi(e) = \{ v_i, v_j \} \}\right|: i \neq j\\
+  2\left|\{e \in E \}\right|
 \end{cases}
 $$
 
@@ -160,7 +160,7 @@ e_1 & e_2 & e_3 & e_4~~
 \end{array}
 $$
 
-**Wniosek:** $|\{ v \in V: \neg (2\lvert\deg(v)) \}|$ jest parzysta
+**Wniosek:** $|\{ v \in V: \neg \left(2\lvert\deg\left(v\right)\right) \}|$ jest parzysta
 
 ## $Twierdzenie$ #2
 
@@ -170,16 +170,16 @@ wówczas $\sum_{\{x,y\} \in E}(\deg(x) + \deg(y)) = \sum_{x \in V}\deg^2(x)$
 ### Dowód
 
 $$
-\sum_{\{x,y\} \in E}( \deg(x) + \deg(y) ) = \frac{1}{2}\sum_{\{x,y\} \in V}||\{x,y\} \in E||( \deg(x) + \deg(y) )=
+\sum_{\{x,y\} \in E}( \deg(x) + \deg(y) ) = \frac{1}{2}\sum_{\{x,y\} \in V}\Big\lVert\{x,y\} \in E\Big\rVert\Big( \deg(x) + \deg(y) \Big)=
 $$
 $$
-= \frac{1}{2}( \sum_{x \in V} \sum_{y \in V}( || \{x,y\} \in E|| \deg(x) ) + \sum_{x \in V} \sum_{y \in V} ( || \{x,y\} \in E || \deg(y) ) ) =
+= \frac{1}{2}\bigg( \sum_{x \in V} \sum_{y \in V}\Big( \big\lVert \{x,y\} \in E\big\rVert \deg(x) ) + \sum_{x \in V} \sum_{y \in V} \Big( \big\lVert \{x,y\} \in E \big\rVert \deg(y) \Big) \bigg) =
 $$
 $$
-= \frac{1}{2}( \sum_x\deg(x)( \sum_y ||\{x,y\} \in E|| ) + \sum_y\deg(y) ( \sum_x||\{x,y\} \in E|| ) ) =
+= \frac{1}{2}\bigg( \sum_x\deg(x)\Big( \sum_y \big\lVert\{x,y\} \in E\big\rVert \Big) + \sum_y\deg(y) \Big( \sum_x\big\lVert\{x,y\} \in E\big\rVert \Big) \bigg) =
 $$
 $$
-= \frac{1}{2}( \sum_x\deg^2(x) + \sum_y\deg^2(y) )
+= \frac{1}{2}\bigg( \sum_x\deg^2(x) + \sum_y\deg^2(y) \bigg)
 $$
 $\blacksquare$
 
@@ -195,7 +195,7 @@ $\blacksquare$
 
 *Ile jest nieizomorficznych grafów prostych na $\{1,...,n\}$*
 
-odp.: $L_n \sim \frac{2^{\binom{n}{2}}}{n!}$
+odp.: $L_n \sim \frac{2^{\small\binom{n}{2}}}{n!}$
 
 ### Przykład
 
@@ -225,7 +225,7 @@ Ciąg $(d_1...d_n)$ jest graficzny, jeśli istnieje graf prosty $(V,E)$ o tym rz
 
 ## $Twierdzenie$ *Havel-Hakiri*
 
-Ciąg $g = (g_1...g_n)$ jest graficzny $\iff$ gdy ciąg $(g_2'...g_n')$ jest graficzny, gdzie\
+Ciąg $g = (g_1...g_n)$ jest graficzny $\iff$ gdy ciąg $(g_2'...g_n')$ jest graficzny, gdzie
 $$
 d_i =
 \begin{cases}
