--- a/electives/wtg/wyk/2020-03-18/2020-03-18.md
+++ b/electives/wtg/wyk/2020-03-18/2020-03-18.md
@@ -55,7 +55,7 @@ Niech $G=(V,E)$ będzie grafem prostym przy czym $|V|=n\ge 1$.
 
 Na Twierdzenie to można spojrzeć tak: mając trzy własności $\big\{$spójność, acykliczność, posiadanie $n-1$ wierzchołków $\big\}$ każda dwójka z nich implikuje trzecią.
 
-## D-d Twierdzenia #1
+## D-d $Twierdzenia$ #1
 
 $1.\implies2.$\
 (indukcja po $n$ $|V(G)|$)\
