--- a/electives/wtg/wyk/2020-03-4/2020-03-4.md
+++ b/electives/wtg/wyk/2020-03-4/2020-03-4.md
@@ -3,7 +3,7 @@
 ## $Twierdzenie$ (Havel-Hakimi)
 
 $(d_1,...,d_n)$ - ciąg graficzny\
-$\equiv (d_2', d_3',...,d_n')$ - graficzny, gdzie:\
+$\equiv (d_2', d_3',...,d_n')$ - graficzny, gdzie:
 $$
 d_i =
 \begin{cases}
@@ -12,7 +12,7 @@ d_i =
 \end{cases}
 $$
 
-### Dowód
+### Dowód $Twierdzenia$ Havel-Hakimi
 
 $\upuparrows$
 
@@ -42,8 +42,8 @@ $(3,2,2,2,1)$
 
 $(1,1,1,1)$
 
-- Szukamy grafu o wiersz $\{ 1,...,n \}$
-- Wybieramy taki graf $G = (\{ 1,...,n \}, E)$, że $\sum_{ \{1,x\} \in E }\deg(x)$ jest największe.\
+- Szukamy grafu o wierszu $\{ 1,\dots,n \}$
+- Wybieramy taki graf $G = (\{ 1,\dots,n \}, E)$, że $\sum_{ \{1,x\} \in E }\deg(x)$ jest największe.\
   $\deg(i) = d_i$
 
 ### Oznaczenie sąsiedzi wierzchołka
@@ -166,9 +166,9 @@ $H_3$
   - $G_1*G_2 = (V_1 \cup V_2, E_1 \cup E_2 \cup \{\{x,y\}: x \in V_1 \land y \in V_2\})$
   - Przykład: $E_3 * E_2 = K_{3,2}$
 
-## $Definicja$
+## $Definicje$ - *poruszanie się* po grafie
 
-Ustalmy grafy $G=(V,E,\phi)$
+Ustalmy graf $G=(V,E,\phi)$
 1. Trasa w grafie $G$
    - ciąg $x_0e_1x_1e_1...x_ne_n$ taki że
      - $x_0,...,x_n \in V$
@@ -223,7 +223,7 @@ $n=2$ $\rightarrow$ OK
 Załóżmy, że dla grafów takich, że $|V| = n$ to jest OK\
 Niech $(V,E)$ będzie spójny, $|V| = n+1$ ale $|E| < |V| - 1 = (n+1) -1 = n$, czyli $|E| \le n-1$
 
-#### Claim: jest $X \in V$ takie, że $\deg(x) = 1$
+#### Claim: jest $x \in V$ takie, że $\deg(x) = 1$
 Załóżmy, że $(\forall x \in V)(\deg(x) \ge 2)$
 
 $$
