added imagery to wyk 2020-03-25 of electives/wtg

--- a/electives/wtg/wyk/2020-03-25/2020-03-25.md
+++ b/electives/wtg/wyk/2020-03-25/2020-03-25.md
@@ -107,4 +107,6 @@ Zauważmy, że po wykonaniu linijki `5` mamy `active` $=\{x \in V(G):~d(v,x) = L
 
 Metodę tę nazywamy metodą *„przeszukiwania grafu wszerz”*.
 
-
+![ecc-1](ecc-1.png)
+![ecc-2](ecc-2.png)
+![ecc-3](ecc-3.png)
