refactored wyk naming scheme for electives/wtg

--- a/electives/wtg/wyk/2020-03-11/2020-03-11.md
+++ b/electives/wtg/wyk/2020-03-11/2020-03-11.md
@@ -1,5 +1,6 @@
-# Wykład 2020-03-11*
-*\*called off due to coronavirus*
+# Odległość w grafach*
+*\*called off due to coronavirus*\
+*(2020-03-11)*
 
 ## Odległości w grafie $d(x,y)$
 
