--- a/electives/wtg/wyk/2020-03-18/2020-03-18.md
+++ b/electives/wtg/wyk/2020-03-18/2020-03-18.md
@@ -1,5 +1,6 @@
-# Wykład 2020-03-18\*
-*\*odwołany z powodu koronawirusa*
+# Drzewa\*
+*\*odwołany z powodu koronawirusa*\
+*(2020-03-18)*
 
 ## $Definicja$ Graf *acykliczny*
 
