--- a/electives/wtg/wyk/2020-04-1/2020-04-1.md
+++ b/electives/wtg/wyk/2020-04-1/2020-04-1.md
@@ -1,5 +1,6 @@
-# Wykład 2020-04-1\*
-*\*odwołany z powody koronawirusa*
+# Grafy Planarne I\*
+*\*odwołany z powody koronawirusa*\
+*(2020-04-1)*
 
 ## Kilka pojęć pomocniczych
 
