--- a/electives/wtg/wyk/2020-03-25/2020-03-25.md
+++ b/electives/wtg/wyk/2020-03-25/2020-03-25.md
@@ -1,5 +1,6 @@
-# Wykład 2020-03-25\*
-*\*odwołany z powodu koronawirusa*
+# Drzewa\*
+*\*odwołany z powodu koronawirusa*\
+*(2020-03-25)*
 
 ## $Fakt$ #1
 
