fixed some cosmetic issues in batch #1 of mandatory exercises of 4th-semester/aisd

--- a/4th-semester/aisd/cw/mandatory-exercises/2020-04-6/l3z4.md
+++ b/4th-semester/aisd/cw/mandatory-exercises/2020-04-6/l3z4.md
@@ -162,7 +162,7 @@ Nasz algorytm działałby następująco:
 
 ### Liczenie potęgi macierzy w czasie $O(\lg n)$
 
-Zdefiniujemy funkcję `power_matrix`$(A, k)$:
+Zdefiniujemy funkcję `PowerMatrix`$(A, k)$:
 1. `output =` $\begin{bmatrix}1&0&0\\0&1&0\\0&0&1\end{bmatrix}$
 2. `while` $k>0$:
    1. `if` $2\not|~k$:
