applied some cosmetic fixes

--- a/electives/wtg/wyk/2020-04-1/2020-04-1.md
+++ b/electives/wtg/wyk/2020-04-1/2020-04-1.md
@@ -20,7 +20,7 @@ Każda [krzywa Jordana](#krzywa-jordana) rozdziela płaszczyznę na dwa rozłąc
 
 ![Jordan's curve](jordan-curve.png)
 
-## $Definicja$ **graf planarny**
+## $\text{Definicja}$ **graf planarny**
 
 Graf $G=(V,E)$ jest **grafem planarnym** jeśli jego wierzchołki możemy przedstawić jako punkty płaszczyzny, a krawędzie jako krzywe na płaszczyźnie łączące wierzchołki, przy czym punktami wspólnymi dwóch różnych krawędzi mogą być tylko ich końcowe wierzchołki.
 
@@ -32,12 +32,12 @@ Graf $K_{2,4}$ również jest planarny.
 
 ![graf planarny $K_{2,4}$](graf-planarny-k-2-4.png)
 
-### $Uwagi$ co do grafów planarnych
+### $\text{Uwagi}$ co do grafów planarnych
 
 1. Dosyć łatwo można pokazać, że w pojęciu planarności pojęcie łuku można zastąpić krzywymi łamanymi, czyli takimi, które rozbijają się na skończoną liczę odcinków. Od tej pory zawsze będziemy stosowali takie reprezentacje grafów planarnych.
 2. Można również pokazać, że dowolne krzywe można zastąpić odcinkami. Widzieliśmy to na dwóch powyższych rysunkach.
 
-## $Twierdzenie$ Grafy $K_{3,3}$ oraz $K_5$ nie są planarne
+## $\text{Twierdzenie}$ Grafy $K_{3,3}$ oraz $K_5$ nie są planarne
 
 [Nieformalny dowód $K_{3,3}$ jest nie-planarny](https://youtu.be/wnYtITkWAYA?t=190)
 
@@ -57,12 +57,12 @@ W przypadku drzewa istnieje tylko jeden region *(ściana)*:
 
 ![drzewo](drzewo-reprezentacja-planarna.png)
 
-## $Twierdzenie$ Eulera
+## $\text{Twierdzenie}$ Eulera
 
-Niech $F$ oznacza liczbę ścian, $E$ liczbę krawędzi oraz $V$ liczbę wierzchołków spójnego [grafu planarnego](#definicja-graf-planarny).\
+Niech $F$ oznacza liczbę regionów *(ścian)*, $E$ liczbę krawędzi oraz $V$ liczbę wierzchołków spójnego [grafu planarnego](#textdefinicja-graf-planarny).\
 **Wówczas mamy $F - E + V = 2$**.
 
-## D-d $Twierdzenia$ Eulera
+## D-d $\text{Twierdzenia}$ Eulera
 
 Ustalmy liczbę $V$. Dowód robimy indukcją po liczbie krawędzi. Ze spójności grafy wynika, że $E \ge V-1$.
 
@@ -110,7 +110,7 @@ $$
            3 \cdot F = 3 \cdot y \le \sum_{i=1}^{y}f_i = \sum_{i=1}^{y}\sum_{j=1}^{m}\lVert e_j~\text{jest incyndentna z}~f_j\rVert=\\
            \sum_{j=1}^{m}\sum_{i=1}^{y}\lVert e_j~\text{jest incydentna z}~f_j\rVert \le \sum_{j=1}^{m} = 2\cdot m = 2\cdot E
            $$
-   2. Użyjmy [równości Eulera](#twierdzenie-eulera) $2 = F - E + V$
+   2. Użyjmy [równości Eulera](#texttwierdzenie-eulera) $2 = F - E + V$
    3. Pomnóżmy ją przez $3$ i zastosujmy poprzednią nierówność
    $$
    6 = 3F - 3E + 3V \le 2E - 3E + 3V = -E + 3V
@@ -131,7 +131,7 @@ $$
            4 \cdot F = 4 \cdot y \le \sum_{i=1}^{y}f_i = \sum_{i=1}^{y}\sum_{j=1}^{m}\lVert e_j~\text{jest incyndentna z}~f_j\rVert=\\
            \sum_{j=1}^{m}\sum_{i=1}^{y}\lVert e_j~\text{jest incydentna z}~f_j\rVert \le \sum_{j=1}^{m} = 2\cdot m = 2\cdot E
            $$
-   2. Użyjmy [równości Eulera](#twierdzenie-eulera) $2 = F - E + V$
+   2. Użyjmy [równości Eulera](#texttwierdzenie-eulera) $2 = F - E + V$
    3. Pomnóżmy ją przez $4$ i zastosujmy poprzednią nierówność
    $$
    \begin{aligned}
@@ -155,7 +155,7 @@ Gdyby był planarny to $9 = E \le 2V - 4 = 2 \cdot 6 - 4 = 8$.
 
 ## $\text{Twierdzenie}$ #1
 
-Załóżmy, że $G = (V,E)$ jest [grafem planarnym](#definicja-graf-planarny).
+Załóżmy, że $G = (V,E)$ jest [grafem planarnym](#textdefinicja-graf-planarny).
 Wtedy istnieje wierzchołek $v$ taki, ze $\deg(v) \le 5$
 
 Ta własność przyda nam się, gdy będziemy zajmowali się kolorowaniem grafów.
